infra/k8s/leaderboard-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboard-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leaderboard
  template:
    metadata:
      labels:
        app: leaderboard
    spec:
      containers:
        - name: leaderboard
          image: amansinghs/catcher-leaderboard
---
apiVersion: v1
kind: Service
metadata:
  name: leaderboard-srv
spec:
  selector:
    app: leaderboard
  ports:
    - name: leaderboard
      protocol: TCP
      port: 3000
      targetPort: 3000
